# ZeroEngine

./: .clang-format  .gitattributes  .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  NOTICE  Readme.md  Templates.md  about.hbs  about.toml  clippy.toml  compile_flags.txt  premake5.lua  run.bat  run.sh  rustfmt.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
.zed/: settings.json
Fykor/: App.cpp  App.h  App.hpp  Common.cpp  Common.h  Core.h  Core.hpp  EntryPoint.h  EntryPoint.hpp  Fykor.h  Fykor.hpp  Platform.h  Platform.hpp  Types.h  Window.cpp  Window.h
Fykor/Components/: Transform.h
Fykor/Debug/: Log.h
Fykor/Events/: AppEvent.h  Event.h  GameEntityEvent.h  KeyEvent.h  MouseEvent.h
Fykor/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Fykor/UI/: Button.h
Fykor/Vectors/: Vector2.h  Vector2.hpp  Vector3.h  Vector3.hpp
Fykor/source/: Fykor.h
Fykor/source/Fykor/: App.cpp  App.h  Common.cpp  Common.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Keycodes.h  Log.h  MouseButtoncode.h  Platform.h  Types.h  Window.cpp  Window.h
Fykor/source/Fykor/Events/: AppEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Fykor/source/Fykor/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
Fykor/source/Fykor/Layers/: ImGuiLayer.cpp  ImGuiLayer.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Fykor/source/Fykor/Renderer/: GraphicsContext.h
Fykor/source/Fykor/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
Sandbox/source/: Sandbox.cpp
Sandbox/src/: Sandbox.cpp
ZeroEngine/: Cargo.toml  Readme.md
ZeroEngine/api/cs/: EngineAPI.cs  Input.cs  KeyCode.cs  Physics.cs  Time.cs  ZEScript.cs
ZeroEngine/api/cs/Components/: Camera.cs  Children.cs  Collider.cs  ComponentType.cs  Inactive.cs  Name.cs  Parent.cs  PhysicsSettings.cs  Rigidbody.cs  ScriptComponent.cs  Sprite.cs  Tag.cs  Transform.cs  ZEComponent.cs
ZeroEngine/cli/: README.md
ZeroEngine/cli/zepack/: Cargo.toml  NOTICE  Readme.md
ZeroEngine/cli/zepack/src/: main.rs
ZeroEngine/cli/zerofetch/: Cargo.toml  Readme.md
ZeroEngine/cli/zerofetch/src/: main.rs
ZeroEngine/crates/syspeek/: Cargo.toml  Readme.md
ZeroEngine/crates/syspeek/src/: battery.rs  cpu.rs  disk.rs  env.rs  gpu.rs  lib.rs  network.rs  os.rs  packages.rs  ram.rs
ZeroEngine/crates/ze_app/: Cargo.toml  Readme.md  build.rs
ZeroEngine/crates/ze_app/src/: lib.rs
ZeroEngine/crates/ze_assets/: Cargo.toml  Readme.md  build.rs
ZeroEngine/crates/ze_assets/src/: lib.rs
ZeroEngine/crates/ze_build/: Cargo.toml  Readme.md  build.rs
ZeroEngine/crates/ze_build/src/: lib.rs
ZeroEngine/crates/ze_core/: Cargo.toml  Readme.md  build.rs
ZeroEngine/crates/ze_core/src/: assets.rs  color.rs  error.rs  lib.rs
ZeroEngine/crates/ze_ecs/: Cargo.toml
ZeroEngine/crates/ze_ecs/src/: components.rs  definitions.rs  entity.rs  lib.rs  registry.rs  scene.rs  system.rs  ze_entity_id.rs
ZeroEngine/crates/ze_input/: Cargo.toml  Readme.md
ZeroEngine/crates/ze_input/src/: lib.rs
ZeroEngine/crates/ze_log/: Cargo.toml  Readme.md
ZeroEngine/crates/ze_log/src/: lib.rs
ZeroEngine/crates/ze_physics/: Cargo.toml
ZeroEngine/crates/ze_physics/src/: lib.rs
ZeroEngine/crates/ze_renderer/: Cargo.toml  Readme.md
ZeroEngine/crates/ze_renderer/src/: components.rs  editor_camera_system.rs  lib.rs  render_system.rs
ZeroEngine/crates/ze_renderer/src/backend/: bind_group.rs  bind_group_layout.rs  mesh.rs  pipeline.rs  texture.rs  ubo.rs
ZeroEngine/crates/ze_scripting_cs/: Cargo.toml  Readme.md  build.rs
ZeroEngine/crates/ze_scripting_cs/src/: lib.rs
ZeroEngine/crates/zepack/: Cargo.toml  Readme.md
ZeroEngine/crates/zepack/src/: lib.rs
ZeroEngine/crates/zerengine_app/: Cargo.toml  Readme.md
ZeroEngine/crates/zerengine_app/src/: lib.rs
ZeroEngine/crates/zerengine_core/: Cargo.toml  Readme.md
ZeroEngine/crates/zerengine_core/src/: color.rs  error.rs  lib.rs
ZeroEngine/crates/zerengine_ecs/: Cargo.toml
ZeroEngine/crates/zerengine_ecs/src/: components.rs  entity.rs  lib.rs  scene.rs  system.rs
ZeroEngine/crates/zerengine_input/: Cargo.toml  Readme.md
ZeroEngine/crates/zerengine_input/src/: lib.rs
ZeroEngine/crates/zerengine_log/: Cargo.toml  Readme.md
ZeroEngine/crates/zerengine_log/src/: lib.rs
ZeroEngine/crates/zerengine_renderer/: Cargo.toml  Readme.md  build.rs
ZeroEngine/crates/zerengine_renderer/assets/shaders/: shader.wesl  triangle.wesl  triangle.wgsl
ZeroEngine/crates/zerengine_renderer/src/: components.rs  editor_camera_system.rs  lib.rs  render_system.rs
ZeroEngine/crates/zerengine_renderer/src/backend/: bind_group.rs  bind_group_layout.rs  mesh.rs  mod.rs  pipeline.rs  texture.rs  ubo.rs
ZeroEngine/crates/zerengine_renderer/src/model/: game_object.rs
ZeroEngine/crates/zeroengine/: Cargo.toml
ZeroEngine/crates/zeroengine/src/: banner.rs  hooks.rs  lib.rs
ZeroEngine/source/: ZeroEngine.h
ZeroEngine/source/ZeroEngine/: App.cpp  App.h  Common.cpp  Common.h  Core.h  EntryPoint.h  Input.cpp  Input.h  Log.h  Platform.h  Types.h  Window.cpp  Window.h
ZeroEngine/source/ZeroEngine/Events/: AppEvent.h  Event.h  GameEntityEvent.h  KeyEvent.h  MouseEvent.h
ZeroEngine/source/ZeroEngine/ImGui/: ImGuiLayer.cpp  ImGuiLayer.h
ZeroEngine/source/ZeroEngine/Layers/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
ZeroEngine/source/ZeroEngine/Renderer/: GraphicsContext.h
ZeroEngine/source/ZeroEngine/Renderer/OpenGL/: OpenGLContext.cpp  OpenGLContext.h
ZeroEngine/src/: main.rs
assets/scenes/: main.zescene.json
assets/schemas/: zescene.schema.json
assets/scripts/: Script.cs  Scripts.csproj  TrapScript.cs
assets/shaders/engine/: sprite.wesl
scripts/: check.py  update_notice.py
