[workspace]
members = [
    "ZeroEngine/",
    "ZeroEngine/crates/ze_app",
    "ZeroEngine/crates/ze_assets",
    "ZeroEngine/crates/ze_core",
    "ZeroEngine/crates/ze_input",
    "ZeroEngine/crates/ze_log",
    "ZeroEngine/crates/ze_physics",
    "ZeroEngine/crates/ze_renderer",
    "ZeroEngine/crates/ze_scripting_cs",
    "ZeroEngine/crates/ze_ecs",
    "ZeroEngine/crates/zeroengine",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
authors = ["Gleb Petrikov"]
version = "0.1.0"
repository = "https://github.com/glpetrikov/ZeroEngine"
keywords = ["game-engine"]
categories = ["game-engines"]

[profile.dev]
opt-level = 1
[profile.dev.package."*"]
opt-level = 3 # 3, "s", "z"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
[profile.release.package."*"]
opt-level = "s" # 3, "s", "z"

[profile.dist]
inherits = "release"
opt-level = "s"      # 3, "s", "z"
lto = "fat"
codegen-units = 1
strip = "symbols"
[profile.dist.package."*"]
opt-level = "z" # 3, "s", "z"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

unwrap_used = "warn"
missing_assert_message = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
todo = "warn"

cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
must_use_candidate = "allow"
