[package]
name = "ZeroEngine"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
ctrlc = "3.5.2"
terminal_size = "0.4.4"
winit = "0.30.13"
zerengine_app = { path = "crates/zerengine_app" }
zerengine_core = { path = "crates/zerengine_core" }
zerengine_log = { path = "crates/zerengine_log" }
