[package]
name = "ZeroEngine"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
ctrlc = "3.5.2"
syspeek = "1.3.1"
terminal_size = "0.4.4"
winit = "0.30.13"
zerengine_app = { path = "crates/zerengine_app" }
zerengine_core = { path = "crates/zerengine_core" }
zerengine_log = { path = "crates/zerengine_log" }
