[package]
name = "ZeroEngine"
readme = "Readme.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
zeroengine = { version = "0.1.0", path = "crates/zeroengine" }
