[package]
name = "zerofetch"
version = "2.0.0"
description = "A fast and clean system fetch tool powered by syspeek"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme = "Readme.md"
keywords = ["fetch", "system-info", "cli", "terminal", "rust"]
categories = ["command-line-utilities"]

[dependencies]
syspeek = "1.3.1"
owo-colors = "4"
serde_json = "1"
