[package]
name = "syspeek"
version = "1.3.2"
description = "A fast and simple system information library for CPU, GPU, RAM, battery, disk, network, packages, and OS info"
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
readme = "Readme.md"
keywords = ["system-info", "hardware", "cpu", "gpu", "memory"]
categories = ["os", "hardware-support"]

[dependencies]
gfxinfo = "0.1.2"
sysinfo = "0.39.0"
battery_crate = { package = "battery", version = "0.7.8", optional = true }
local-ip-address = { version = "0.6.12", optional = true }

[features]
default = [
	"gpu",
	"cpu",
	"ram",
	"os",
	"battery",
	"disk",
	"env",
	"network",
	"packages",
]

gpu = []
cpu = []
ram = []
os = []
battery = ["dep:battery_crate"]
disk = []
env = []
network = ["dep:local-ip-address"]
packages = []
