[package]
name = "ze_assets"
readme = "Readme.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1.0.102"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
wesl = "0.4.0"
zepack = { version = "0.1.0", path = "../zepack" }

[build-dependencies]
wesl = "0.4.0"
