[package]
name = "ze_core"
readme = "Readme.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
glam = { version = "0.32.1", features = [
    "bytemuck",
    "serde",
    "zerocopy",
    "mint",
    "encase",
    "fast-math",
] }
anyhow = "1.0.102"
thiserror = "2.0.18"
serde = { version = "1", features = ["derive"] }
