[package]
name = "ze_ecs"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
shipyard = { version = "0.11.3", features = ["serde1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "1", features = ["derive"] }
jsonschema = "0.46.5"
ze_core = { path = "../ze_core" }
bevy_reflect = { version = "0.19.0-rc.2", features = ["glam"] }
