[package]
name = "ze_renderer"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lints]
workspace = true

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
    "webp",
    "jpeg",
    "png",
] }
wgpu = "29.0.3"
winit = "0.30.13"
ze_assets = { path = "../ze_assets" }
ze_core = { path = "../ze_core" }
ze_log = { path = "../ze_log" }
glam = "0.33.0"
bytemuck = "1.25.0"
ze_input = { path = "../ze_input" }
ze_ecs = { path = "../ze_ecs" }
