[package]
name = "ze_scripting_cs"
readme = "Readme.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
netcorehost = { version = "0.20.1", default-features = false, features = [
    "net10_0",
] }
fn-ptr = "0.9.1"
schemars = { version = "1", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
shipyard = "0.11.3"
ze_core = { path = "../ze_core" }
ze_ecs = { path = "../ze_ecs" }
ze_input = { path = "../ze_input" }
ze_renderer = { path = "../ze_renderer" }
