[package]
name = "zerengine_app"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
zerengine_core = { path = "../zerengine_core" }
zerengine_input = { path = "../zerengine_input" }
zerengine_log = { path = "../zerengine_log" }
winit = "0.30.13"
