[package]
name = "zerengine_app"
readme = "Readme.md"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
repository.workspace = true

[dependencies]
zerengine_core = { path = "../zerengine_core" }
zerengine_input = { path = "../zerengine_input" }
zerengine_log = { path = "../zerengine_log" }
winit = "0.30.13"
zerengine_renderer = { version = "0.1.0", path = "../zerengine_renderer" }
tokio = { version = "1.52.3", features = ["full"] }
