[package]
name = "zerengine_renderer"
version = "0.1.0"
edition = "2024"

[dependencies]
image = { version = "0.25.10", default-features = false, features = [
    "webp",
    "jpeg",
    "png",
] }
wgpu = "29.0.3"
winit = "0.30.13"
wesl = "0.3.2"
zerengine_core = { version = "0.1.0", path = "../zerengine_core" }
zerengine_log = { version = "0.1.0", path = "../zerengine_log" }
glam = "0.32.1"
bytemuck = "1.25.0"
zerengine_input = { version = "0.1.0", path = "../zerengine_input" }

[build-dependencies]
wesl = "0.3.2"
