[package]
name = "zeroengine"
version = "0.1.0"
edition = "2024"

[dependencies]
ctrlc = "3.5.2"
syspeek = "1.3.2"
terminal_size = "0.4.4"
winit = "0.30.13"
zerengine_app = { path = "../zerengine_app" }
zerengine_log = { path = "../zerengine_log" }
zerengine_ecs = { version = "0.1.0", path = "../zerengine_ecs" }
owo-colors = "4.3.0"